ci: reduce timeout, simplify SSH remote command
The problem of dropping SSH connections most probably is caused by
https://learn.microsoft.com/en-us/azure/nat-gateway/troubleshoot-nat-connectivity
on the local side and not by the remote side.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,13 +30,13 @@ jobs:
           while :; do
             if
               (
-                ssh -T -o ServerAliveInterval=30 -o StrictHostKeyChecking=accept-new "ubuntu@$hostname.$domain" -- sudo nice -n -10 -- journalctl -u cloud-final -f </dev/null | tee /dev/stderr &
+                ssh -T -o ServerAliveInterval=30 -o StrictHostKeyChecking=accept-new "ubuntu@$hostname.$domain" -- journalctl -u cloud-final -f </dev/null | tee /dev/stderr &
               ) | grep -qF '</details>'
             then
               break
             fi
           done
-        timeout-minutes: 60
+        timeout-minutes: 45
     env:
       ssh_key: ${{ secrets.ssh_key }}
       dns_token_git_url: ${{ secrets.dns_token_git_url }}
