fixup! ci: create ephemeral SSH key if not set as secret

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@HEAD
       - name: Create new VM and start EaaS installation using https://eaas.dev/eaas-installer/blob/@/scripts/manage-test-servers-openstack.py
         run: |
-          (test "$ssh_key" && printf '%s\n' "$ssh_key" || echo y | ssh-keygen -q -t ed25519 -C "" -N "" -f /dev/stdout) | install -D -m 0600 /dev/stdin ~/.ssh/id_ed25519
+          (test "$ssh_key" && printf '%s\n' "$ssh_key" || echo y | ssh-keygen -q -t ed25519 -C "" -N "" -f /dev/stderr 2>&1 >/dev/null | sed -n /---BEGIN/,/---END/p) | install -D -m 0600 /dev/stdin ~/.ssh/id_ed25519
           ssh-keygen -y -f ~/.ssh/id_ed25519 | tee /dev/stderr >> ssh_keys
           sudo apt-get update && sudo apt-get install -y python3-openstacksdk
           git clone https://eaas.dev/eaas-installer
