--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,8 +11,9 @@ on:
       domain:
         type: string
       env:
-        description: "Environment for https://github.com/emulation-as-a-service/eaas-installer/blob/@/scripts/install-test-server.py#L38"
+        description: "Environment for https://eaas.dev/eaas-installer/blob/@/scripts/install-test-server.py#L38"
         type: string
+        default: https=1 acmesh=zerossl setup_keycloak=1 import_test_environments=1 show_summary=1
 
 jobs:
   deploy:
@@ -31,7 +32,6 @@ jobs:
           cd eaas-installer
           git clone "$dns_token_git_url"
           printf %s "$clouds_yaml" > clouds.yaml
-          : "${env:=https=1 acmesh=zerossl setup_keycloak=1 import_test_environments=1 show_summary=1}"
           set -f
           set -- $env             
           set +f
