--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,6 +15,10 @@ on:
         description: "Environment for https://eaas.dev/eaas-installer/blob/@/scripts/install-test-server.py#L38"
         type: string
         default: https=1 acmesh=zerossl setup_keycloak=1 import_test_environments=1 show_summary=1
+      eaas_version:
+        type: string
+      demo_ui_version:
+        type: string
 
 jobs:
   deploy:
@@ -37,6 +41,12 @@ jobs:
           set -f
           set -- $env             
           set +f
+          if test "${eaas_version-}"; then
+            set -- "$@" "eaas_version=$eaas_version"
+          fi
+          if test "${demo_ui_version-}"; then
+            set -- "$@" "demo_ui_version=$demo_ui_version"
+          fi
           scripts/manage-test-servers-openstack.py -p "eaas-test-$hostname" -d "$domain" create -f d2-4 -s ../ssh_keys --hostname "$hostname" "$@"
           scripts/manage-test-servers-openstack.py -p "eaas-test-$hostname" -d "$domain" cleanup -k 1
       - name: EaaS installation log
