--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -76,6 +76,7 @@ jobs:
       clouds_yaml: ${{ secrets.clouds_yaml }}
       domain: ${{ inputs.domain || vars.domain }}
       hostname: ${{ inputs.hostname || vars.hostname }}
+      flavor: ${{ inputs.flavor }}
       env: ${{ inputs.env }}
       eaas_version: ${{ inputs.eaas_version }}
       demo_ui_version: ${{ inputs.demo_ui_version }}
