--- a/.github/workflows/delete.yaml
+++ b/.github/workflows/delete.yaml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   cleanup:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     environment:
       name: ${{ inputs.hostname || vars.hostname }}
       url: https://${{ env.hostname }}.${{ env.domain }}
